--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.42);
+    margin: 0;
+    padding: 0;
 }
 
 .container{
@@ -19,7 +21,7 @@ body{
 }
 
 .test{
-   width: 450px;
+   width: 60%;
    font-size: 25px;
    padding: 20px 20px ;
    background-color: rgba(0, 0, 255, 0.67);
@@ -27,7 +29,7 @@ body{
    border-radius: 25px;
    position: relative;
    color: white;
-   left: calc( 100% - 510px );
+   float: right;
    
 }
 
@@ -47,6 +49,7 @@ body{
     color: white;
     margin: 10px 10px;
     border-radius: 25px;
+    float: left;
  }
 
 .ui{
@@ -73,3 +76,47 @@ body{
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.56)
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: aliceblue;
+    }
+
+    .container{
+        width: 100%;
+        height: 100%;
+        background-color: aliceblue;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+       border-radius: 10px;
+    }
+
+
+    .ui{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0, 0, 128, 0.4);
+        height: 70px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-top: 1px solid rgba(0, 0, 0, 0.232)
+    }
+    
+    .ui button{
+        width: 15%;
+        height: 30px;
+        border-radius: 8px;
+        border: none;
+        margin: 0 10px;
+    }
+
+    .ui input{
+        width: 70%;
+        height: 30px;
+        border-radius: 8px;
+        border: 1px solid rgba(0, 0, 0, 0.56)
+    }
+  }
